# particles

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  particles
.cache/clangd/index/: glad.c.40D2D1708ED5A870.idx  glad.h.689D8C92D509AEAD.idx  khrplatform.h.E7B11A84B2F7BCF5.idx  main.cpp.DB1159F7D8C02ED7.idx  particles.cpp.F3570913DB783F73.idx  particles.h.42F4F2FCBBB93B40.idx  window.cpp.4D5FD85FA3B1EFD5.idx  window.h.AE7A99CE388D1A9F.idx
include/glad/: glad.h
src/: glad.c  main.cpp
src/core/: particles.cpp  particles.h
src/core/math/: aabb.h  math.h
src/renderer/: window.cpp  window.h
